--- a/college_admission/student/templates/landingPage.html
+++ b/college_admission/student/templates/landingPage.html
@@ -487,6 +487,7 @@
                     <ul class="main-menu">
                         <li><a href="{% url "landingPage" %}">Home</a></li>
                         <li><a href="about us">About Us</a></li>
+                        <li><a href="form">Form</a></li>
                         <li><a href="{% url "course" %}">Courses</a></li>
                         <li><a href="contact">Contact Us</a></li>
                         <li><a href="{% url "registerStudent" %}">Register</a></li>
